common-applications/control/majun-anti-poisoning/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anti-poisoning
  namespace: majun-anti-poisoning
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: anti-poisoning
  template:
    metadata:
      labels:
        app: anti-poisoning
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: anti-poisoning
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/majun/anti-poisoning:dd23c9301a24e32f8acc2325d006609feab2d781
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 2000m
            memory: 4000Mi
          limits:
            cpu: 4000m
            memory: 8000Mi
        volumeMounts:
        - mountPath: /var/log
          name: log-data
        - mountPath: /usr/local/primary.ks
          name: secret
          subPath: primary-ks
        - mountPath: /usr/local/standby.ks
          name: secret
          subPath: standby-ks
        - mountPath: /usr/local/work.ks
          name: secret
          subPath: work-ks
        readinessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 60
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
      volumes:
      - name: log-data
        persistentVolumeClaim:
          claimName: log-data-volume
      - name: secret
        secret:
          secretName: anti-poisoning-secrets
